--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "vue-mixins": "^0.3.6"
   },
   "eslintConfig": {
     "root": true,
